# di-contracts

./: pyproject.toml
src/keneth/di_contracts/: __init__.py  container.py  container_context.py  service.py
